--- a/src/public/index.html
+++ b/src/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000">
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="shortcut icon" href="/favicon.ico">
     <title>React App</title>
   </head>
   <body>
@@ -14,5 +14,7 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+
+    <script src="/bundle.js"></script>
   </body>
 </html>
